--- a/src/pages/PORTAL/4_novedades_1_2.html
+++ b/src/pages/PORTAL/4_novedades_1_2.html
@@ -39,7 +39,7 @@
         "cls":"",
         "ico":"file-invoice-dollar",
         "title":"Novedades",
-        "image":"tmp_header.png",
+        "image":"INTERNA_NOVEDADES.webp",
         "content":"¡Para nosotros es muy importante estar al día con tu información! Aquí puedes actualizar los datos más relevantes."
      }'
     ></include>
@@ -180,8 +180,9 @@
               </svg>
               <p>
                 <b>Recuerda:</b> el certificado que ingresarás debe estar bajo
-                el NIT de Asulado. Al finalizar, recibirás un correo confirmando
-                el éxito de tu solicitud.
+                el NIT de Asulado.<br />
+                Al finalizar, recibirás un correo confirmando el éxito de tu
+                solicitud.
               </p>
             </div>
           </div>
