--- a/src/pages/PORTAL/4_novedades_1_3.html
+++ b/src/pages/PORTAL/4_novedades_1_3.html
@@ -39,7 +39,7 @@
         "cls":"",
         "ico":"file-invoice-dollar",
         "title":"Novedades",
-        "image":"tmp_header.png",
+        "image":"INTERNA_NOVEDADES.webp",
         "content":"¡Para nosotros es muy importante estar al día con tu información! Aquí puedes actualizar los datos más relevantes."
      }'
     ></include>
@@ -160,10 +160,9 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <p class="text-lg">
-              A continuación, elige el tipo de deducción que necesitas solicitar
-              y tu Caja de Compensación. Diligencia los datos requeridos y
-              adjunta el certificado indicado. Ten en cuenta que tú elegirás el
-              valor de tu aporte.
+              Selecciona tu Caja de Compensación. Diligencia los datos
+              requeridos y adjunta el certificado indicado. Ten en cuenta que tú
+              elegirás el valor de tu aporte.
             </p>
             <div role="alert" class="alert">
               <svg
@@ -181,8 +180,9 @@
               </svg>
               <p>
                 <b>Recuerda:</b> el certificado debe estar bajo el NIT de
-                Asulado. Al finalizar, recibirás un correo confirmando el éxito
-                de tu solicitud.
+                Asulado.<br />
+                Al finalizar, recibirás un correo confirmando el éxito de tu
+                solicitud.
               </p>
             </div>
           </div>
