--- a/src/pages/PORTAL/calendario.html
+++ b/src/pages/PORTAL/calendario.html
@@ -35,7 +35,7 @@
       "cls":"",
       "ico":"calendar-heart",
       "title":"Calendario de pagos",
-      "image":"top_calendario.webp",
+      "image":"INTERNA_FAQ.webp",
       "content":"¡Conoce el calendario de pagos de tu mesada pensional como cliente de ASULADO!"
    }'
     ></include>
