--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -35,7 +35,7 @@
         "cls":"",
         "ico": "comments-question-check",
         "title":"Solicitudes",
-        "image":"tmp_header.png",
+        "image":"INTERNA_SOLICITUDES.webp",
         "content":"En ASULADO valoramos tu opinión y estamos comprometidos con la mejora continua. Por eso, hemos creado este espacio especialmente para ti, donde puedes diligenciar tus Preguntas, Quejas, Reclamos y Servicios (PQRS) de forma rápida y sencilla."
       }'
     ></include>
