--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -39,7 +39,7 @@
       "cls":"",
       "ico":"file-invoice",
       "title":"Certificados y otros documentos",
-      "image":"tmp_header.png",
+      "image":"INTERNA_CERTIFICADOS.webp",
       "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
      }'
     ></include>
