--- a/src/pages/PORTAL/4_novedades_2_1.html
+++ b/src/pages/PORTAL/4_novedades_2_1.html
@@ -39,7 +39,7 @@
         "cls":"",
         "ico":"file-invoice-dollar",
         "title":"Novedades",
-        "image":"tmp_header.png",
+        "image":"INTERNA_NOVEDADES.webp",
         "content":"¡Para nosotros es muy importante estar al día con tu información! Aquí puedes actualizar los datos más relevantes."
      }'
     ></include>
@@ -160,7 +160,9 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <p class="text-lg">
-              Adjunta a continuación tu certificado de estudio.
+              Adjunta a continuación tu certificado de estudio. Te recomendamos
+              nombrar el documento según su contenido, sin caracteres especiales
+              ni nombres muy largos. Procura que sea en formato PDF.
             </p>
           </div>
           <div class="pa_co_content">
