--- a/src/pages/PORTAL/4_novedades_2_2.html
+++ b/src/pages/PORTAL/4_novedades_2_2.html
@@ -39,7 +39,7 @@
         "cls":"",
         "ico":"file-invoice-dollar",
         "title":"Novedades",
-        "image":"tmp_header.png",
+        "image":"INTERNA_NOVEDADES.webp",
         "content":"¡Para nosotros es muy importante estar al día con tu información! Aquí puedes actualizar los datos más relevantes."
      }'
     ></include>
@@ -161,6 +161,11 @@
           <div class="pa_co_header">
             <p class="text-lg">
               Adjunta a continuación tu certificado de supervivencia.
+            </p>
+            <p class="text-lg">
+              Te recomendamos nombrar el documento según su contenido, sin
+              caracteres especiales ni nombres muy largos. Procura que sea en
+              formato PDF.
             </p>
           </div>
           <div class="pa_co_content">
