--- a/src/pages/PORTAL/4_novedades_2_3.html
+++ b/src/pages/PORTAL/4_novedades_2_3.html
@@ -39,7 +39,7 @@
         "cls":"",
         "ico":"file-invoice-dollar",
         "title":"Novedades",
-        "image":"tmp_header.png",
+        "image":"INTERNA_NOVEDADES.webp",
         "content":"¡Para nosotros es muy importante estar al día con tu información! Aquí puedes actualizar los datos más relevantes."
      }'
     ></include>
