Update CSS styles and HTML content in PORTAL pages

--- a/src/pages/PORTAL/2_certificados_colilla.html
+++ b/src/pages/PORTAL/2_certificados_colilla.html
@@ -98,7 +98,15 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h4>Tipo de consulta:</h4>
+            <h4>Generara colilla de pagos:</h4>
+            <p class="text-lg">
+              Para obtener detalles sobre tu último pago, selecciona <b>“Consultar
+              último pago de mi mesada”</b>. Ahora bien, si necesitas comparar y
+              revisar diferentes pagos anteriores, selecciona <b>“Consultar varios
+              periodos de mi mesada”</b> e indica el rango de fechas que deseas
+              revisar.
+            </p>
+            <!-- <h4>Tipo de consulta:</h4>
             <ul class="items g2">
               <li>
                 <p>
@@ -112,7 +120,7 @@
                   comparar y revisar tus pagos anteriores.
                 </p>
               </li>
-            </ul>
+            </ul> -->
           </div>
           <div class="pa_co_content">
             <include
