--- a/src/pages/PORTAL/2_certificados_copia.html
+++ b/src/pages/PORTAL/2_certificados_copia.html
@@ -91,9 +91,12 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <!-- <div class="pa_co_header">
-            <h4>Generar certificado de pensión:</h4>
-            <ul class="items">
+          <div class="pa_co_header">
+            <h4>Generar copia de póliza:</h4>
+            <p class="text-lg">
+              Haz clic a continuación para generar la copia de tu póliza.
+            </p>
+            <!-- <ul class="items">
               <li>
                 <p>
                   Selecciona <b>“Certificado de pensión SIN salario”</b> para
@@ -108,8 +111,8 @@
                   conseguir un registro más completo.
                 </p>
               </li>
-            </ul>
-          </div> -->
+            </ul> -->
+          </div>
           <div class="pa_co_content">
             [***** !!!!!!!! COD DE SALESFORCE *****]
           </div>
