--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -91,7 +91,14 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="pa_co_header"></div>
+          <div class="pa_co_header">
+            <h4>Generar certificado de ingresos y retenciones:</h4>
+            <p class="text-lg">
+              Selecciona el periodo de tiempo al que corresponden los ingresos y
+              retenciones que necesitas revisar. Te notificaremos cuando el
+              certificado sea enviado a tu correo.
+            </p>
+          </div>
           <div class="pa_co_form">
             <include
               src="PORTAL/2_certificados/4_certificados_ingreso.html"
