--- a/src/pages/PORTAL/4_novedades_1_1.html
+++ b/src/pages/PORTAL/4_novedades_1_1.html
@@ -158,7 +158,9 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="pa_co_header"></div>
+          <div class="pa_co_header">
+            <h4>Redistribuciones de mesada:</h4>
+          </div>
           <div class="pa_co_content">
             [***** !!!!!!!! COD DE SALESFORCE *****]
           </div>
