--- a/src/pages/PORTAL/4_novedades_1_3.html
+++ b/src/pages/PORTAL/4_novedades_1_3.html
@@ -159,6 +159,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
+            <h4> Novedades de Caja de Compensación:</h4>
             <p class="text-lg">
               Selecciona tu Caja de Compensación. Diligencia los datos
               requeridos y adjunta el certificado indicado. Ten en cuenta que tú
