--- a/src/pages/PORTAL/4_novedades_2_3.html
+++ b/src/pages/PORTAL/4_novedades_2_3.html
@@ -159,6 +159,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
+            <h4>Novedades de cuenta financiera:</h4>
             <p class="text-lg">
               Adjunta a continuación tu certificado de estudio.
             </p>
