--- a/src/pages/PORTAL/2_certificados_pension.html
+++ b/src/pages/PORTAL/2_certificados_pension.html
@@ -93,6 +93,11 @@
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
             <h4>Generar certificado de pensión:</h4>
+            <p class="text-lg">
+              Indica si deseas recibir tu certificado de pensión con o sin la
+              información salarial correspondiente.
+            </p>
+            <!-- <h4>Generar certificado de pensión:</h4>
             <ul class="items g2">
               <li>
                 <p>
@@ -108,7 +113,7 @@
                   conseguir un registro más completo.
                 </p>
               </li>
-            </ul>
+            </ul> -->
           </div>
           <div class="pa_co_content">
             <include
