Update links in PORTAL pages

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -168,7 +168,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/2_certificados_copia.html",
                     "ico": "file-invoice-dollar",
                      "title":"Copia de póliza",
                     "image":"home/CERTIFICADO_03.webp",
@@ -222,7 +222,7 @@
 
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_1_2.html",
                     "ico": "file-lines",
                      "title":"Certificado de estudio",
                     "image":"home/NOVEDADES_02.webp",
@@ -231,7 +231,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_1_3.html",
                     "ico": "file-lines",
                      "title":"Certificado de supervivencia",
                     "image":"home/NOVEDADES_03.webp",
@@ -240,7 +240,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_1_4.html",
                     "ico": "file-lines",
                      "title":"Novedades de EPS",
                     "image":"home/NOVEDADES_04.webp",
@@ -249,7 +249,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_2_1.html",
                     "ico": "file-lines",
                      "title":"Novedades de Caja de Compensación",
                     "image":"home/NOVEDADES_05.webp",
@@ -258,7 +258,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_2_2.html",
                     "ico": "file-lines",
                      "title":"Novedades de cuenta financiera",
                     "image":"home/NOVEDADES_06.webp",
@@ -267,7 +267,7 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_2_3.html",
                     "ico": "file-lines",
                      "title":"Novedades Pensión Voluntaria",
                     "image":"home/NOVEDADES_07.webp",
