Update image file name in faq.html and mix-manifest.json

--- a/src/pages/PORTAL/faq.html
+++ b/src/pages/PORTAL/faq.html
@@ -35,7 +35,7 @@
       "cls":"",
       "ico":"message-question",
       "title":"Preguntas frecuentes",
-      "image":"top_calendario.webp",
+      "image":"INTERNA_PREGUNTAS.webp",
       "content":"Encuentra respuestas claras a tus dudas más comunes. Simplificamos la información para que obtengas ayuda de manera fácil y eficiente."
    }'
     ></include>
