Update CSS styles in portal.css, fix typo in p_header.html, and update content in PORTAL pages

--- a/src/pages/PORTAL/2_certificados_colilla.html
+++ b/src/pages/PORTAL/2_certificados_colilla.html
@@ -64,7 +64,7 @@
                "ico": "file-lines",
                "title":"Certificado de pensión",
                "image":"tmp_servicio.png",
-               "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."
+               "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra familia."
               }'
             ></include>
 
@@ -84,7 +84,7 @@
               locals='{"cls":"",
                "link":"/PORTAL/2_certificados_ingreso.html",
                "ico": "money-check-pen",
-               "title":"Certificado de ingresos y retenciones",
+               "title":"Certificado de Ingresos y Retenciones",
                "image":"tmp_servicio.png",
                "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."
               }'
@@ -98,7 +98,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3>Generara colilla de pagos:</h3>
+            <h3>Generar colilla de pagos:</h3>
             <p class="text-lg">
               Para obtener detalles sobre tu último pago, selecciona <b>“Consultar
               último pago de mi mesada”</b>. Ahora bien, si necesitas comparar y
