--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -63,7 +63,7 @@
               "link":"/PORTAL/2_certificados_pension.html",
               "ico": "file-lines",  "title":"Certificado de pensión",
               "image":"tmp_servicio.png",
-              "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
+              "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra familia."}'
             ></include>
 
             <include
@@ -79,7 +79,7 @@
               src="PORTAL/p_link_servicio.html"
               locals='{"cls":"active",
               "link":"/PORTAL/2_certificados_ingreso.html",
-              "ico": "money-check-pen",  "title":"Certificado de ingresos y retenciones",
+              "ico": "money-check-pen",  "title":"Certificado de Ingresos y Retenciones",
               "image":"tmp_servicio.png",
               "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
             ></include>
