--- a/src/pages/PORTAL/4_novedades_1_1.html
+++ b/src/pages/PORTAL/4_novedades_1_1.html
@@ -146,7 +146,7 @@
                   "ico": "file-lines",
                   "title":"Consulta novedades",
                   "image":"tmp_servicio.png",
-                  "content":"¡Tu bienestar es nuestra prioridad! Por eso puedes conocer el estado de la actualización de tus novedades de nómina aquí."
+                  "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
                 }'
               ></include>
             </ul>
