--- a/src/pages/PORTAL/4_novedades_3_1.html
+++ b/src/pages/PORTAL/4_novedades_3_1.html
@@ -146,7 +146,7 @@
                   "ico": "file-lines",
                   "title":"Consulta novedades",
                   "image":"tmp_servicio.png",
-                  "content":"¡Tu bienestar es nuestra prioridad! Por eso puedes conocer el estado de la actualización de tus novedades de nómina aquí."
+                  "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
                 }'
               ></include>
             </ul>
@@ -158,7 +158,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3>Consulta aqui tus Novedades</h3>
+            <h3>Consulta aquí tus Novedades</h3>
             <p class="text-lg">
               Consulta los detalles de tus novedades de nómina a continuación,
               ordenadas según la fecha de cada solicitud.
@@ -179,7 +179,7 @@
                     <tr>
                       <th scope="col" colspan="1" id="header:j_id5:j_id6header">
                         <div id="header:j_id5:j_id6header:sortDiv">
-                          Número novedad
+                          Número Novedad
                         </div>
                       </th>
                       <th scope="col" colspan="1" id="header:j_id5:j_id9header">
@@ -202,7 +202,7 @@
                         id="header:j_id5:j_id17header"
                       >
                         <div id="header:j_id5:j_id17header:sortDiv">
-                          Tipo de novedad
+                          Tipo de Novedad
                         </div>
                       </th>
                       <th
@@ -220,7 +220,7 @@
                         id="header:j_id5:j_id23header"
                       >
                         <div id="header:j_id5:j_id23header:sortDiv">
-                          Observaciónes
+                          Observaciones
                         </div>
                       </th>
                     </tr>
