--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -163,7 +163,7 @@
                     "ico": "file-lines",
                      "title":"Certificado de pensión",
                     "image":"home/CERTIFICADO_02.webp",
-                    "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra Familia."}'
+                    "content":"Documento que certifica el ingreso de una mesada pensional por parte de ASULADO. Reúne información sobre el tipo de pensión, valor de la mesada pensional y la fecha desde cuándo formas parte de nuestra familia."}'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
@@ -178,7 +178,7 @@
                     src="PORTAL/p_home_servicio.html"
                     locals='{ "link":"/PORTAL/2_certificados_ingreso.html",
                     "ico": "money-check-pen",
-                     "title":"Certificado de ingresos y retenciones",
+                     "title":"Certificado de Ingresos y Retenciones",
                     "image":"home/CERTIFICADO_04.webp",
                     "content":"Documento que informa los ingresos y las retenciones que se realizaron durante un periodo de tiempo determinado. Te servirá para que realices tu declaración de renta y otros trámites."}'
                   ></include>
@@ -280,7 +280,7 @@
                     "ico": "file-lines",
                     "title":"Consultar una novedad",
                     "image":"home/NOVEDADES_08.webp",
-                    "content":"¡Tu bienestar es nuestra prioridad! Por eso puedes conocer el estado de la actualización de tus novedades de nómina aquí."
+                    "content":"¡Tu tranquilidad es nuestra prioridad! Conoce las actualizaciones de tus novedades de nómina aquí.."
                   }'
                   ></include>
                 </ul>
