Update checkbox label in contrasena.html

--- a/src/pages/PORTAL/contrasena.html
+++ b/src/pages/PORTAL/contrasena.html
@@ -152,6 +152,32 @@
                               </td>
                             </tr>
                             <tr>
+                              <td
+                                class="dataCol first form-control"
+                                colspan="2"
+                              >
+                                <div class="form-control">
+                                  <label
+                                    class="label cursor-pointer justify-start gap-2"
+                                  >
+                                    <input
+                                      type="checkbox"
+                                      checked="checked"
+                                      class="checkbox"
+                                    />
+                                    <span class="label-text">
+                                      Acepto los términos y condiciones y
+                                      <a
+                                        href="#"
+                                        class="text-azul-bright2 underline underline-offset-2"
+                                        >politicas de privacidad
+                                      </a>
+                                    </span>
+                                  </label>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
                               <td class="dataCol last form-action" colspan="2">
                                 <input
                                   id="j_id0:j_id2:pb:pbs:j_id7:Login"
