Update CSS styles in forms.css and portal.css, and modify content in PORTAL pages

--- a/src/pages/PORTAL/3_actualizacion_contacto.html
+++ b/src/pages/PORTAL/3_actualizacion_contacto.html
@@ -75,7 +75,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header"></div>
-          <div class="pa_co_content">
+          <div class="pa_co_form">
             <include src="PORTAL/3_actualizacion/2_contacto.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
