Update content in PORTAL/3_actualizacion_contacto.html

--- a/src/pages/PORTAL/3_actualizacion_contacto.html
+++ b/src/pages/PORTAL/3_actualizacion_contacto.html
@@ -74,7 +74,15 @@
     <div id="content" class="as__section pa__inter">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
-          <div class="pa_co_header"></div>
+          <div class="pa_co_header">
+            <h3>Actualización de datos de contacto</h3>
+            <p>
+              Procura actualizar paulatinamente todos los datos a continuación.
+              Una vez termines, haz clic en “confirmar”. Si deseas modificar
+              algún dato, haz clic en “editar datos”. ¡Recuerda que para
+              nosotros es vital contar con toda tu información al día!
+            </p>
+          </div>
           <div class="pa_co_form">
             <include src="PORTAL/3_actualizacion/2_contacto.html"></include>
           </div>
