Update form styling and layout in PORTAL/3_actualizacion_contacto.html and src/css/forms.css

--- a/src/pages/PORTAL/3_actualizacion_contacto.html
+++ b/src/pages/PORTAL/3_actualizacion_contacto.html
@@ -83,7 +83,7 @@
               nosotros es vital contar con toda tu información al día!
             </p>
           </div>
-          <div class="pa_co_form">
+          <div class="pa_co_form formpp">
             <include src="PORTAL/3_actualizacion/2_contacto.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
