Act terminos logo

--- a/src/pages/terminos/index.html
+++ b/src/pages/terminos/index.html
@@ -96,7 +96,7 @@
               enmarcados bajo la Ley sobre Protección de Datos Personales (Ley
               1581 de 2012). Los tratamientos específicos puede encontrarlos
               <a
-                href="/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf"
+                href="/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf"
                 target="_blank"
                 >aquí</a
               >.
@@ -155,9 +155,14 @@
               brindarte una oferta de servicios a tu medida, comparte tus datos
               personales con algunos proveedores y/o aliados. Los cuales
               relacionamos a continuación:
+              <a
+              href="/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf"
+              target="_blank"
+              >aquí</a
+            >.
             </p>
 
-            <ul>
+           <!--<ul>
               <li>Protección S.A: Contratación Renta Vitalicia.</li>
 
               <li>
@@ -168,7 +173,7 @@
               <li>ERNST Y YOUNG AUDIT S.A.S: Revisoría Fiscal.</li>
 
               <li>DEXPRO S.A.S: Servicios de Investigación.</li>
-            </ul>
+            </ul>-->
           </div>
         </div>
       </div>
