Update form styling and layout in PORTAL/3_actualizacion_contacto.html and src/css/forms.css

--- a/src/pages/PORTAL/2_certificados_copia.html
+++ b/src/pages/PORTAL/2_certificados_copia.html
@@ -113,8 +113,10 @@
               </li>
             </ul> -->
           </div>
-          <div class="pa_co_content">
-            [***** !!!!!!!! COD DE SALESFORCE *****]
+          <div class="pa_co_form">
+            <include
+              src="PORTAL/2_certificados/3_certificados_poliza.html"
+            ></include>
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
