--- a/src/pages/PORTAL/4_novedades_2_1.html
+++ b/src/pages/PORTAL/4_novedades_2_1.html
@@ -159,15 +159,15 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3> Certificado de estudio:</h3>
+            <h3>Certificado de estudio:</h3>
             <p class="text-lg">
               Adjunta a continuación tu certificado de estudio. Te recomendamos
               nombrar el documento según su contenido, sin caracteres especiales
               ni nombres muy largos. Procura que sea en formato PDF.
             </p>
           </div>
-          <div class="pa_co_content">
-            [***** !!!!!!!! COD DE SALESFORCE *****]
+          <div class="pa_co_form">
+            <include src="PORTAL/4_novedades/4_2_1.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
