--- a/src/pages/PORTAL/4_novedades_2_2.html
+++ b/src/pages/PORTAL/4_novedades_2_2.html
@@ -159,7 +159,7 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa_co_header">
-            <h3> Certificado de supervivencia:</h3>
+            <h3>Certificado de supervivencia:</h3>
             <p class="text-lg">
               Adjunta a continuación tu certificado de supervivencia.
             </p>
@@ -169,8 +169,8 @@
               formato PDF.
             </p>
           </div>
-          <div class="pa_co_content">
-            [***** !!!!!!!! COD DE SALESFORCE *****]
+          <div class="pa_co_form">
+            <include src="PORTAL/4_novedades/4_2_2.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
