--- a/src/pages/PORTAL/4_novedades_2_3.html
+++ b/src/pages/PORTAL/4_novedades_2_3.html
@@ -164,8 +164,8 @@
               Adjunta a continuación tu certificado de estudio.
             </p>
           </div>
-          <div class="pa_co_content">
-            [***** !!!!!!!! COD DE SALESFORCE *****]
+          <div class="pa_co_form formpp">
+            <include src="PORTAL/4_novedades/4_2_3.html"></include>
           </div>
           <div class="pa_co_footer prose"></div>
         </div>
