--- a/src/pages/terminos/index.html
+++ b/src/pages/terminos/index.html
@@ -153,8 +153,7 @@
             <p>
               ASULADO, en el desarrollo de su objeto social y en aras de
               brindarte una oferta de servicios a tu medida, comparte tus datos
-              personales con algunos proveedores y/o aliados. Los cuales
-              relacionamos a continuación:
+              personales con algunos proveedores y/o aliados. Para conocerlos haz clic
               <a
               href="/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf"
               target="_blank"
