--- a/src/pages/terminos/index.html
+++ b/src/pages/terminos/index.html
@@ -157,8 +157,8 @@
               <a
               href="/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf"
               target="_blank"
-              >aquí</a
-            >.
+              >aquí.</a
+            >
             </p>
 
            <!--<ul>
