--- a/src/pages/ciberseguridad/index.html
+++ b/src/pages/ciberseguridad/index.html
@@ -42,7 +42,7 @@
       src="top_single.html"
       locals='{ 
       "bg": "bg-BG-1",
-      "image": "top_nuestra_empresa.webp",
+      "image": "top_ciberseguridad.webp",
       "t1start":"1",
       "t2start":"3",
       "title1": "Ciberseguridad",
