--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -79,13 +79,13 @@
             <div class="flex flex-col gap-4">
               <a href="#">
                 <img
-                  src="/assets/images/img_guia_1.jpg"
+                  src="/assets/images/img_guia_1.webp"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
               <p class="text-base text-azul-bold">
-                Conoce a Lusa, tu asistente virtual de ASULADO. Ella te ayudará
+                Conoce a <b>Lusa</b>, tu asistente virtual de <b>ASULADO</b>. Ella te ayudará
                 con tus solicitudes de colillas de pago, certificados de pensión
                 y copias de póliza. ¡Estará disponible para ti las 24 horas del
                 día!
@@ -94,31 +94,25 @@
             <div class="flex flex-col gap-4">
               <a href="#">
                 <img
-                  src="/assets/images/img_guia_1.jpg"
+                  src="/assets/images/img_guia_2.webp"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
               <p class="text-base text-azul-bold">
-                Conoce a Lusa, tu asistente virtual de ASULADO. Ella te ayudará
-                con tus solicitudes de colillas de pago, certificados de pensión
-                y copias de póliza. ¡Estará disponible para ti las 24 horas del
-                día!
+                ¿Sabes cómo chatear con Lusa, tu asistente virtual de  <b>ASULADO</b>? ¡Es muy fácil! Aquí te explicamos cada paso que debes seguir para conversar con ella y solicitar los documentos que necesites.
               </p>
             </div>
             <div class="flex flex-col gap-4">
               <a href="#">
                 <img
-                  src="/assets/images/img_guia_1.jpg"
+                  src="/assets/images/img_guia_3.webp"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
               <p class="text-base text-azul-bold">
-                Conoce a Lusa, tu asistente virtual de ASULADO. Ella te ayudará
-                con tus solicitudes de colillas de pago, certificados de pensión
-                y copias de póliza. ¡Estará disponible para ti las 24 horas del
-                día!
+                Solicita colillas de pago, certificados de pensión, copias de tu póliza y más con Lusa, tu asistente virtual.<b>A ¡Aquí te contamos todos los servicios con los que ella puede ayudarte!</b>
               </p>
             </div>
           </div>
