--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -77,42 +77,40 @@
         <div class="as__section_content_full">
           <div class="grid grid-cols-1 md:grid-cols-3 grid-auto-rows gap-8">
             <div class="flex flex-col gap-4">
-              <a href="#">
+              <a href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4" target="_blank">
                 <img
-                  src="/assets/images/img_guia_1.webp"
+                  src="/assets/images/img_guia_1.jpg"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
               <p class="text-base text-azul-bold">
-                Conoce a <b>Lusa</b>, tu asistente virtual de <b>ASULADO</b>. Ella te ayudará
-                con tus solicitudes de colillas de pago, certificados de pensión
-                y copias de póliza. ¡Estará disponible para ti las 24 horas del
-                día!
+                <b>Lusa</b>, nueva asistente virtual de <b>ASULADO</b>
+               
               </p>
             </div>
             <div class="flex flex-col gap-4">
-              <a href="#">
+              <a href="https://www.youtube.com/watch?v=GJB7MZBPfeQ&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=3" target="_blank">
                 <img
-                  src="/assets/images/img_guia_2.webp"
+                  src="/assets/images/img_guia_2.jpg"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
               <p class="text-base text-azul-bold">
-                ¿Sabes cómo chatear con Lusa, tu asistente virtual de  <b>ASULADO</b>? ¡Es muy fácil! Aquí te explicamos cada paso que debes seguir para conversar con ella y solicitar los documentos que necesites.
+                ¿Cómo chatear con  <b>Lusa</b>? La asistente virtual de <b>ASULADO</b>? 
               </p>
             </div>
             <div class="flex flex-col gap-4">
-              <a href="#">
+              <a href="https://www.youtube.com/watch?v=9LyvirRP4F8&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=2" target="_blank">
                 <img
-                  src="/assets/images/img_guia_3.webp"
+                  src="/assets/images/img_guia_3.jpg"
                   alt="Asulado te guia"
                   class="w-full rounded-3xl block"
                 />
               </a>
               <p class="text-base text-azul-bold">
-                Solicita colillas de pago, certificados de pensión, copias de tu póliza y más con Lusa, tu asistente virtual.<b>A ¡Aquí te contamos todos los servicios con los que ella puede ayudarte!</b>
+                ¿Qué documentos puedo autogestionar con <b>Lusa</b>, la asistente virtual de <b>ASULADO</b>? 
               </p>
             </div>
           </div>
@@ -120,7 +118,7 @@
       </div>
     </section>
 
-    <section class="as__section bg-alpha-20 pb-20">
+   <!---<section class="as__section bg-alpha-20 pb-20">
       <div class="as__section_wrapper full">
         <div class="as__section_content_full">
           <div class="flex flex-row gap-10">
@@ -139,7 +137,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
