--- a/src/pages/gobierno_corporativo/index.html
+++ b/src/pages/gobierno_corporativo/index.html
@@ -113,6 +113,13 @@
             "data": "4"
           }'
             ></include>
+            <include
+            src="gobierno/6_informacion_accionistas.html"
+            locals='{
+          "cls": "",
+          "data": "5"
+        }'
+          ></include>
           </div>
         </div>
       </div>
